5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1602_2895.log
== TEST (2019-03-20 18:45:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = (valor*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (valor*var) + frete
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = (valor*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (valor*var) + frete
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var) + frete
TypeError: unsupported operand type(s) for +: 'float' and 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = ( quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = ( quantidade*var) + frete
TypeError: unsupported operand type(s) for +: 'float' and 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var ) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var ) + frete
TypeError: unsupported operand type(s) for +: 'float' and 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:49:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var) + frete
TypeError: unsupported operand type(s) for +: 'float' and 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float("O valor do frete ")
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = float("O valor do frete ")
ValueError: could not convert string to float: 'O valor do frete '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade =int(input("A quantidade de jogos a serem encomendados "))
# Leitura das entradas e conversao para float:
var = float(input("O valor unitario de cada jogo "))
frete = float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.189393
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
